--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -178,6 +178,7 @@ SET(QGIS_APP_SRCS
   layout/qgslayoutdesignerdialog.cpp
   layout/qgslayoutguidewidget.cpp
   layout/qgslayoutappmenuprovider.cpp
+  layout/qgslayoutmapwidget.cpp
   layout/qgslayoutpagepropertieswidget.cpp
   layout/qgslayoutpropertieswidget.cpp
 
@@ -374,6 +375,7 @@ SET (QGIS_APP_MOC_HDRS
   layout/qgslayoutappmenuprovider.h
   layout/qgslayoutdesignerdialog.h
   layout/qgslayoutguidewidget.h
+  layout/qgslayoutmapwidget.h
   layout/qgslayoutpagepropertieswidget.h
   layout/qgslayoutpropertieswidget.h
 
