--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -363,6 +363,7 @@ SET(QGIS_CORE_SRCS
   layout/qgslayoutaligner.cpp
   layout/qgslayoutcontext.cpp
   layout/qgslayouteffect.cpp
+  layout/qgslayoutexporter.cpp
   layout/qgslayoutgridsettings.cpp
   layout/qgslayoutguidecollection.cpp
   layout/qgslayoutitem.cpp
@@ -976,6 +977,7 @@ SET(QGIS_CORE_HDRS
   composer/qgspaperitem.h
 
   layout/qgslayoutaligner.h
+  layout/qgslayoutexporter.h
   layout/qgslayoutgridsettings.h
   layout/qgslayoutitemundocommand.h
   layout/qgslayoutmeasurement.h
