Port polygon and polyline items to layouts

--- a/tests/src/python/CMakeLists.txt
+++ b/tests/src/python/CMakeLists.txt
@@ -86,6 +86,8 @@ ADD_PYTHON_TEST(PyQgsLayoutGridSettings test_qgslayoutgridsettings.py)
 ADD_PYTHON_TEST(PyQgsLayoutGuide test_qgslayoutguides.py)
 ADD_PYTHON_TEST(PyQgsLayoutItem test_qgslayoutitem.py)
 ADD_PYTHON_TEST(PyQgsLayoutItemPropertiesDialog test_qgslayoutitempropertiesdialog.py)
+ADD_PYTHON_TEST(PyQgsLayoutPolygon test_qgslayoutpolygon.py)
+ADD_PYTHON_TEST(PyQgsLayoutPolyline test_qgslayoutpolyline.py)
 ADD_PYTHON_TEST(PyQgsLayoutSnapper test_qgslayoutsnapper.py)
 ADD_PYTHON_TEST(PyQgsLayoutUnitsComboBox test_qgslayoutunitscombobox.py)
 ADD_PYTHON_TEST(PyQgsLineSymbolLayers test_qgslinesymbollayers.py)
