--- a/tests/src/python/CMakeLists.txt
+++ b/tests/src/python/CMakeLists.txt
@@ -87,6 +87,7 @@ ADD_PYTHON_TEST(PyQgsLayoutGuide test_qgslayoutguides.py)
 ADD_PYTHON_TEST(PyQgsLayoutItem test_qgslayoutitem.py)
 ADD_PYTHON_TEST(PyQgsLayoutItemPropertiesDialog test_qgslayoutitempropertiesdialog.py)
 ADD_PYTHON_TEST(PyQgsLayoutMap test_qgslayoutmap.py)
+ADD_PYTHON_TEST(PyQgsLayoutMapGrid test_qgslayoutmapgrid.py)
 ADD_PYTHON_TEST(PyQgsLayoutPolygon test_qgslayoutpolygon.py)
 ADD_PYTHON_TEST(PyQgsLayoutPolyline test_qgslayoutpolyline.py)
 ADD_PYTHON_TEST(PyQgsLayoutSnapper test_qgslayoutsnapper.py)
