--- a/tests/src/python/CMakeLists.txt
+++ b/tests/src/python/CMakeLists.txt
@@ -87,6 +87,7 @@ ADD_PYTHON_TEST(PyQgsLayoutGuide test_qgslayoutguides.py)
 ADD_PYTHON_TEST(PyQgsLayoutItem test_qgslayoutitem.py)
 ADD_PYTHON_TEST(PyQgsLayoutItemPropertiesDialog test_qgslayoutitempropertiesdialog.py)
 ADD_PYTHON_TEST(PyQgsLayoutLabel test_qgslayoutlabel.py)
+ADD_PYTHON_TEST(PyQgsLayoutLegend test_qgslayoutlegend.py)
 ADD_PYTHON_TEST(PyQgsLayoutMap test_qgslayoutmap.py)
 ADD_PYTHON_TEST(PyQgsLayoutMapGrid test_qgslayoutmapgrid.py)
 ADD_PYTHON_TEST(PyQgsLayoutPicture test_qgslayoutpicture.py)
